# randomized-algorithms

./: .gitignore  CMakeLists.txt  README.md
include/randomized-algorithms/: configuration.hpp  identity.h  identity.hpp
include/randomized-algorithms/detail/: identity_impl.h  identity_impl.hpp  identity_impl.hxx
src/: CMakeLists.txt  identity.cpp
src/test/: identity_test.cpp
test/: CMakeLists.txt  identity_test.cpp
